<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isabel.android.juegodecartas22UK.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:autofillHints="@string/marcador"
            android:ems="10"
            android:hint="@string/marcador"
            android:inputType="number"
            android:text="@string/cero"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cruz"
            android:contentDescription="@string/carta1"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cruz"
            android:contentDescription="@string/carta2"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cruz"
            android:contentDescription="@string/carta3"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cruz"
            android:contentDescription="@string/carta4"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cruz"
            android:contentDescription="@string/carta5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="123dp"
        >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:textAlignment="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ganador"
            android:contentDescription="@string/resultado"/>

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:contentDescription="@string/dinero"
            android:textAlignment="center"
            app:srcCompat="@drawable/dinero" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>